# rudi-node-write

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.ipynb  README.md  package-lock.json  pre-commit-checks.sh  pyproject.toml  requirements-dev.txt  requirements.txt
doc/rudi-api/: RUDI node catalog API - 1.3.0.yml  RUDI producer internal API - 1.3.0.yml
scripts/: pip-chill.sh  pre-commit-checks.sh  pre-commit-up.sh  update-libs.sh
src/rudi_node_write/: rudi_node_writer.py
src/rudi_node_write/connectors/: io_connector.py  io_rudi_api_write.py  io_rudi_jwt_factory.py  io_rudi_manager_write.py  io_rudi_manager_write_v3.py  io_rudi_media_write.py  io_rudi_node_write.py
src/rudi_node_write/controllers/: ctrl_correspondences.py
src/rudi_node_write/io_connectors/: io_connector.py  (+5 more)
tests/_test_files/: RUDI producer internal API - 1.3.0.yml  WERTSTOFFE.m8s  csw-all-records.xml  dummy.csv  meta.json  unicode_chars.txt
tests/connectors/: test_io_connector.py  test_io_rudi_api_write.py  test_io_rudi_jwt_factory.py  test_io_rudi_manager_write.py  test_io_rudi_manager_write_v3.py  test_io_rudi_media_write.py
tests/rudi_types/: test_rudi_const.py  test_rudi_contact.py  test_rudi_dates.py  test_rudi_dictionary_entry.py  test_rudi_geo.py  test_rudi_licence.py  test_rudi_media.py  test_rudi_meta.py  test_rudi_meta_misc.py  test_rudi_org.py  test_serializable.py
tests/utils/: test_date.py  test_date_utils.py  test_dict_utils.py  test_err.py  test_file_utils.py  test_html_utils.py  test_jwt.py  test_list_utils.py  test_str_utils.py  test_type_date.py  test_typing_utils.py  test_url_utils.py
(+29 files in other folders)
